# IonInsertML

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bayesian_opt/: evaluate.py  evaluate_kernel.py  model_selector1.py  model_selector2.py
data/: INCAR
results_data/: active_data_default.csv  active_data_loocv.csv  active_data_mle.csv
scripts/: run_eval.py
src/ioninsertml/bayesian_opt/: bo.py  evaluate.py  model_selector.py  model_selector1.py  model_selector2.py  visualize_gp.py
src/ioninsertml/bayesian_opt/bo_test_results/: X_train_iter_1.npy  X_train_iter_10.npy  X_train_iter_2.npy  X_train_iter_3.npy  X_train_iter_4.npy  X_train_iter_5.npy  X_train_iter_6.npy  X_train_iter_7.npy  X_train_iter_8.npy  X_train_iter_9.npy  final_results.csv  training_data_iter_0.csv  training_data_iter_1.csv  training_data_iter_10.csv  training_data_iter_2.csv  training_data_iter_3.csv  training_data_iter_4.csv  training_data_iter_5.csv  training_data_iter_6.csv  training_data_iter_7.csv  training_data_iter_8.csv  training_data_iter_9.csv  y_train_iter_1.npy  y_train_iter_10.npy  y_train_iter_2.npy  y_train_iter_3.npy  y_train_iter_4.npy  y_train_iter_5.npy  y_train_iter_6.npy  y_train_iter_7.npy  y_train_iter_8.npy  y_train_iter_9.npy
src/ioninsertml/utils/: data_loader.py  generate_configs.py
tests/: test_imports.py
utils/: data_loader.py  graph_builder.py
