[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ioninsertml"
version = "0.1.0"
description = "Ion Insertion Machine Learning with Bayesian Optimization"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "ase>=3.22",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
ioninsertml-evaluate = "ioninsertml.bayesian_opt.evaluate:main"
ioninsertml-generate = "ioninsertml.utils.generate_configs:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ioninsertml*"]